kubernetes/apps/storage/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
spec:
  hostnames: ["longhorn.hiems.net"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: longhorn-frontend
          namespace: storage
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
